--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Modificar.cshtml
@@ -50,7 +50,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Ciudad",new {IdProvincia = Model.IdProvincia, Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Ciudad",new {IdProvincia = Model.IdProvincia, IdPais = ViewBag.IdPais,Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
