--- a/ERP/Core.Erp.Web/Areas/General/Views/Empresa/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Empresa/Nuevo.cshtml
@@ -63,11 +63,20 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </div>
-                                    @Html.TextBoxFor(q => q.em_fechaInicioContable, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "datepicker" })
+                                    @Html.DevExpress().DateEditFor(q => q.em_fechaInicioContable, settings =>
+                           {
+                               settings.Name = "em_fechaInicioContable";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
                                     @Html.ValidationMessageFor(q => q.em_fechaInicioContable, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
 
