--- a/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/Nuevo.cshtml
@@ -18,12 +18,14 @@
                 <div class="form-group">
                     <label for="codigo">Código</label>
                     @Html.TextBoxFor(q => q.codigo, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.codigo, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="Su_CodigoEstablecimiento">Establecimiento</label>
                     @Html.TextBoxFor(q => q.Su_CodigoEstablecimiento, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Su_CodigoEstablecimiento, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-8">
@@ -53,12 +55,14 @@
                 <div class="form-group">
                     <label for="Su_Ruc">Ruc</label>
                     @Html.TextBoxFor(q => q.Su_Ruc, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Su_Ruc, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-9">
                 <div class="form-group">
                     <label for="Su_Telefonos">Teléfonos</label>
                     @Html.TextBoxFor(q => q.Su_Telefonos, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Su_Telefonos, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -69,7 +73,8 @@
                 <div class="form-group">
                     <label for="Su_JefeSucursal">Jefe de sucursal</label>
                     @Html.TextBoxFor(q => q.Su_JefeSucursal, new { @class = "form-control" })
-                </div>
+                    @Html.ValidationMessageFor(m => m.Su_JefeSucursal, "", new { @class = "text-danger" })
+               </div>
             </div>
         </div>
     </div>
@@ -79,7 +84,8 @@
                 <div class="form-group">
                     <label for="Su_Direccion">Dirección</label>
                     @Html.TextAreaFor(m => m.Su_Direccion, new { @class = "form-control", @rows = 3 })
-                </div>
+                    @Html.ValidationMessageFor(m => m.Su_Direccion, "", new { @class = "text-danger" })
+               </div>
             </div>
         </div>
     </div>
@@ -89,7 +95,8 @@
                 <div class="form-group">
                     <label for="Su_Ubicacion">Ubicación</label>
                     @Html.TextAreaFor(m => m.Su_Ubicacion, new { @class = "form-control", @rows = 3 })
-                </div>
+                    @Html.ValidationMessageFor(q => q.Su_Ubicacion, "", new { @class = "text-danger" })
+              </div>
             </div>
         </div>
     </div>
