--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/AprobacionOP/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/AprobacionOP/Index.cshtml
@@ -138,7 +138,7 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <button type="button" class="btn btn-success" id="btn_aprobar" onclick="aprobar();">Aprobar</button>
-                            <button type="button" class="btn btn-danger" id="btn_rechazar" onclick="rechazar();">Rechazar</button>
+                            <button type="button" class="btn btn-danger" id="btn_rechazar" onclick="rechazar();">Anular</button>
                         </div>
                     </div>
                 </div>
