--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/_GridViewPartial_puntoventa.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/_GridViewPartial_puntoventa.cshtml
@@ -80,12 +80,13 @@
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(140);
+            c.Width = Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdPuntoVta", "Punto de venta").Width = Unit.Percentage(20);
-        settings.Columns.Add("cod_PuntoVta", "Código").Width = Unit.Percentage(20);
-        settings.Columns.Add("nom_PuntoVta", "Descripción").Width = Unit.Percentage(50);
+        settings.Columns.Add("IdPuntoVta", "ID").Width = Unit.Percentage(10);        
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(20);
+        settings.Columns.Add("cod_PuntoVta", "Punto emisión").Width = Unit.Percentage(10);
+        settings.Columns.Add("nom_PuntoVta", "Descripción").Width = Unit.Percentage(40);
         settings.Columns.Add(column =>
         {
             column.FieldName = "estado";
