--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Nuevo.cshtml
@@ -61,7 +61,7 @@
                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.ClientSideEvents.DateChanged = "function(s,e){actualizar_periodo();}";
+                       //settings.Properties.ClientSideEvents.DateChanged = "function(s,e){actualizar_periodo();}";                      
 
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.pe_FechaIni, "", new { @class = "text-danger" })
@@ -84,7 +84,7 @@
                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.ClientSideEvents.DateChanged = "function(s,e){actualizar_periodo();}";
+                       //settings.Properties.ClientSideEvents.DateChanged = "function(s,e){actualizar_periodo();}";
 
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.pe_FechaFin, "", new { @class = "text-danger" })
@@ -117,30 +117,32 @@
 
 <script>
     $(function () {
-        actualizar_periodo();
-    });
-    $("#pe_mes").change(function () {
-        actualizar_periodo();
-    });
-    $("#IdanioFiscal").change(function () {
-        actualizar_periodo();
+        $("#pe_mes").change(function () {
+            actualizar_periodo();
+        });
+
+        $("#IdanioFiscal").change(function () {
+            actualizar_periodo();
+        });
     });
 
     function actualizar_periodo() {
         var mes = $("#pe_mes").val();
-        var pad = "00";
-        var p = pad.substring(0, pad.length - mes.length) + mes;
-
         var anio = $("#IdanioFiscal").val();
-        var periodo = anio + p;
-        $("#IdPeriodo").val(periodo)
+        var date = new Date(anio, mes, 1);
+        var dia_inicio = 1;
 
-        var date = new Date(anio + '-' + mes + '-'+1);
-        pe_FechaIni.SetValue(date)
-        var ultimoDia = new Date(date.getFullYear(), date.getMonth() + 1, 0);
-        pe_FechaFin.SetValue(ultimoDia)
+        var fecha_texto_inicio = anio + "-" + mes + "-" + dia_inicio
+        var fecha_inicio = Date.parse(fecha_texto_inicio);
 
-        
+        var dia_fin = new Date(anio, mes, 0).getDate();
+        var fecha_texto_fin = anio + "-" + mes + "-" + dia_fin;
+        var fecha_fin = Date.parse(fecha_texto_fin);
 
+        fecha_inicio_setear = new Date(fecha_inicio);
+        fecha_fin_setear = new Date(fecha_fin);
+
+        pe_FechaIni.SetValue(fecha_inicio_setear)
+        pe_FechaFin.SetValue(fecha_fin_setear)
     }
 </script>
