--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Nuevo.cshtml
@@ -143,7 +143,7 @@
             success: function (data) {
                 $.each(data, function (i, row) {
                     $("#IdPuntoVta").append("<option value=" + row.IdPuntoVta + ">" + row.nom_PuntoVta + "</option>");
-                    $("#IdPuntoVta").val(1);
+                    $("#IdPuntoVta").val($("#IdPuntoVta option:first").val());
                 });
             },
             error: function (error) {
