--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/AnioFiscal/_GridViewPartial_anio_fiscal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/AnioFiscal/_GridViewPartial_anio_fiscal.cshtml
@@ -80,9 +80,21 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("IdanioFiscal","Año fiscal").Width = Unit.Percentage(20);
-        settings.Columns.Add("af_fechaIni","Fecha incio").Width = Unit.Percentage(20);
-        settings.Columns.Add("af_fechaFin","Fecha fin").Width = Unit.Percentage(20);
+        settings.Columns.Add("IdanioFiscal","Año fiscal").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "af_fechaIni";
+            column.Caption = "Fecha inicio";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = Unit.Percentage(40);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "af_fechaFin";
+            column.Caption = "Fecha fin";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = Unit.Percentage(40);
+        }); 
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
