--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/_GridViewPartial_vendedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/_GridViewPartial_vendedor.cshtml
@@ -82,6 +82,7 @@
         });
 
 
+        settings.Columns.Add("IdVendedor", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add("Codigo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Ve_Vendedor", "Vendedor").Width = Unit.Percentage(60);
         settings.Columns.Add(column =>
