--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Index.cshtml
@@ -14,8 +14,9 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Index", "DevolucionInventario", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -35,6 +36,13 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-md-12">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="IdSucursal">Sucursal*</label>
+                            @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                            @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                         <div class="col-md-2">
                         <div class="form-group">
                             <label for="">Fecha inicio*</label>
@@ -94,7 +102,8 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_devolucion", new { Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin })
+       
+                 @Html.Action("GridViewPartial_devolucion", new {IdSucursal = Model.IdSucursal, Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_ini })
 
 
         </div>
