--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_GridViewPartial_transferencias.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_transferencias";
-        settings.CallbackRouteValues = new { Controller = "TransferenciasInventario", Action = "GridViewPartial_transferencias" };
+        settings.CallbackRouteValues = new { Controller = "TransferenciasInventario", Action = "GridViewPartial_transferencias", IdSucursal = ViewBag.IdSucursal,fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
 
         settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "TransferenciasInventario", Action = "GridViewPartial_transferenciasAddNew" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "TransferenciasInventario", Action = "GridViewPartial_transferenciasUpdate" };
